--- a/index.html
+++ b/index.html
@@ -19,10 +19,7 @@
         </section>
         <section>
             <h2>Assista a gameplay</h2>
-            <video controls>
-                <source src="videoJogo/VideoTeseuLabirinto.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/CbttQNCeO1E?si=cDvgGxk6cRWnaWbA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </section>
         <section>
             <h2>Download</h2>
