--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section>
             <h2>Download</h2>
             <p>Clique no botão para realizar o download do jogo</p>
-            <a href="game.zip" class="botao-download" download>Download Game</a>
+            <a href="https://drive.google.com/file/d/16XTKvBFgPZKprF7tRawD-Ke_ZreH-pQT/view?usp=sharing" class="botao-download" download>Fazer o Download</a>
         </section>
     </main>
     <footer>
