Reexportado o jogo sem compressão Brotli

--- a/webglPasta/index.html
+++ b/webglPasta/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Jogo Teseu e o Labirinto.loader.js";
+      var loaderUrl = buildUrl + "/Jogo Teseu e o Labirinto WebGL.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Jogo Teseu e o Labirinto.data.br",
-        frameworkUrl: buildUrl + "/Jogo Teseu e o Labirinto.framework.js.br",
-        codeUrl: buildUrl + "/Jogo Teseu e o Labirinto.wasm.br",
+        dataUrl: buildUrl + "/Jogo Teseu e o Labirinto WebGL.data",
+        frameworkUrl: buildUrl + "/Jogo Teseu e o Labirinto WebGL.framework.js",
+        codeUrl: buildUrl + "/Jogo Teseu e o Labirinto WebGL.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Teseu e o Labirinto",
