Adicionando o jogo para ser jogado diretamente no site

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
             <iframe width="560" height="315" src="https://www.youtube.com/embed/CbttQNCeO1E?si=cDvgGxk6cRWnaWbA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </section>
         <section>
+            <h2>Dê um play no jogo</h2>
+            <iframe src="webglPasta/index.html" width="960" height="600" frameborder="0" allowfullscreen></iframe>
+        </section>
+        <section>
             <h2>Download</h2>
             <p>Clique no botão para realizar o download do jogo</p>
             <a href="https://drive.google.com/file/d/16XTKvBFgPZKprF7tRawD-Ke_ZreH-pQT/view?usp=sharing" class="botao-download" download>Fazer o Download</a>
