--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Criador do Jogo. Todos os direitos reservados.</p>
+        <p>&copy; 2024 Mauricio R. Todos os direitos reservados.</p>
     </footer>
 </body>
 </html>
